# pgn2tex

./: .gitignore  Readme.md  pyproject.toml
.metals/: metals.mv.db
examples/: lichess_study_stafford-gambit_by_wyggam_2020.10.04.pgn  puzzles.tex  stafford.aux  stafford.out  stafford.tex  stafford.toc
pgn2tex/: main.py  puzzles.py  study.py  utils.py
pgn2tex/templates/: book.tex  frontpage.sla  singlegame.tex
web/: index.html  pgn2tex-0.0.1-py3-none-any.whl
